# IOT_Raspberry

./: README.md
ESP32_Clients_T1/main/: esp_client.c
Python_Server_T1/: Desempaquetamiento.py  sqlinit.py
Tarea_1_corregir/ESP32_Clients_T1/: CMakeLists.txt  sdkconfig  sdkconfig.old
Tarea_1_corregir/ESP32_Clients_T1/main/: CMakeLists.txt  esp_client.c  esp_client_main.c
Tarea_1_corregir/Python_Server_T1/: DatabaseWork.py  Desempaquetamiento.py  TCPServer.py  UDPServer.py  main.py
Tarea_2/Cliente/: CMakeLists.txt  Configuration_TCP.c  sdkconfig.old
Tarea_2/Cliente/main/: CMakeLists.txt  Kconfig.projbuild  TCP_clients.c  UDP_clients.c  esp_client_main.c  gatts_table_creat_demo.c  gatts_table_creat_demo.h  packeting.c  sensors.c  tcp_init.c
Tarea_2/Server/: BLEServer.py  DatabaseWork.py  Desempaquetamiento.py  TCPServer.py  UDPServer.py  findAddresses.py  gui_t2.ui  mainServer.py  mainSet.py  sqlinit.py  tcp_BD.py  test.py
Tarea_2/Server/Data_Base/: tarea2.db
Tarea_2/pyqt/: ex.py  gui_t2.ui  mainSet.py  requirements.txt
Tarea_2/pyqt/ejemplobd/: ejemplo.db  ejemplo_agu.py
